add verification test

--- a/Document/Python学习/Crawler/proxy_test.ipynb
+++ b/Document/Python学习/Crawler/proxy_test.ipynb
@@ -36,6 +36,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"args\": {}, \n",
+      "  \"headers\": {\n",
+      "    \"Accept\": \"*/*\", \n",
+      "    \"Accept-Encoding\": \"gzip, deflate\", \n",
+      "    \"Host\": \"httpbin.org\", \n",
+      "    \"User-Agent\": \"python-requests/2.20.0\", \n",
+      "    \"X-Amzn-Trace-Id\": \"Root=1-60ce21c9-0d30b2f34ead2e6c330104e6\"\n",
+      "  }, \n",
+      "  \"origin\": \"118.123.40.82\", \n",
+      "  \"url\": \"https://httpbin.org/get\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# proxy = get_my_proxy()\n",
+    "proxies = {\n",
+    "    'http': 'http://' + proxy,\n",
+    "    'https': 'https://' + proxy,\n",
+    "}\n",
+    "\n",
+    "try:\n",
+    "    response = requests.get('https://httpbin.org/get', proxies=proxies)\n",
+    "    print(response.text)\n",
+    "except requests.exceptions.ConnectionError as e:\n",
+    "    print('Error', e.args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "import aiohttp\n",
+    "\n",
+    "async def main():\n",
+    "    async with aiohttp.ClientSession() as session:\n",
+    "        async with session.get('https://httpbin.org/get', proxy=proxy) as response:\n",
+    "            print(await response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
